# api-test

./: .gitignore  BACKEND_ROUTES.md  BUG_SHEET.md  DRAG_AND_DROP_GUIDE.md  FRONTEND_IMPLEMENTATION.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_STATUS.md  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  RUST_EXECUTOR_COMPLETE.md  TAURI_DESKTOP_VERIFICATION.md  VISUAL_DIAGRAMS.md  VISUAL_GUIDE.md  WHERE_IS_THE_BUTTON.md  WORKFLOW_ARCHITECTURE.md  WORKFLOW_CHECKLIST.md  WORKFLOW_FEATURE_SUMMARY.md  WORKFLOW_README.md  YES.JSON  package-lock.json  package.json
.github/workflows/: release.yml  tauri-build.yml
apps/backend/: .env.example  package.json  server.js  vercel.json
apps/backend/app/: globals.css  layout.js  page.js  page.module.css
apps/backend/lib/: auth.js  db.js
apps/backend/models/: Request.js  User.js
apps/backend/src/: server.js
apps/backend/src/lib/: firebase.js
apps/backend/src/routes/: auth.js  (+4 more)
apps/desktop/: index.html  package.json  tailwind.config.js  vite.config.js
apps/desktop/src/: App.jsx  index.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs  security.rs
apps/desktop/src-tauri/src/commands/: files.rs  http.rs  mod.rs  workflow.rs
apps/desktop/src-tauri/src/workflow/: data_mapper.rs  executor.rs  models.rs  parser.rs
apps/landing/: package.json
apps/landing/src/: App.jsx  App.module.css  Docs.jsx  index.css
apps/realtime/: .env.example  package.json  server.js
(+72 files in other folders)
