[package]
name = "payloadx-api-studio"
version = "1.3.1"
description = "PayloadX API Studio"
authors = ["PayloadX Team"]
license = ""
repository = ""
default-run = "payloadx-api-studio"
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = ["shell-open", "fs-read-file", "fs-write-file", "fs-exists", "dialog-open", "dialog-save"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json", "cookies", "multipart"] }
tokio = { version = "1", features = ["full"] }
url = "2.5"

[features]
custom-protocol = ["tauri/custom-protocol"]
default = ["custom-protocol"]
